--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -1,17 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-    </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+	</PropertyGroup>
 
-    <ItemGroup>
-      <Compile Remove="Pages\**" />
-      <Content Remove="Pages\**" />
-      <EmbeddedResource Remove="Pages\**" />
-      <None Remove="Pages\**" />
-    </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Pages\**" />
+		<Content Remove="Pages\**" />
+		<EmbeddedResource Remove="Pages\**" />
+		<None Remove="Pages\**" />
+	</ItemGroup>
 
-    <ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
 		<PackageReference Include="Microsoft.Data.Sqlite.Core" Version="5.0.12" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.12" />
@@ -20,20 +21,20 @@
 
 	</ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\API\KenTan.Api.csproj" />
-      <ProjectReference Include="..\DataLayer\KenTan.DataLayer.csproj" />
-    </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\API\KenTan.Api.csproj" />
+		<ProjectReference Include="..\DataLayer\KenTan.DataLayer.csproj" />
+	</ItemGroup>
 
-    <ItemGroup>
-      <None Update="App_Data\products.db">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
-    </ItemGroup>
+	<ItemGroup>
+		<None Update="App_Data\products.db">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
-    <!-- <ItemGroup> -->
-      <!-- <ProjectReference Include="..\API\KenTan.Api.csproj" /> -->
-      <!-- <ProjectReference Include="..\DataLayer\KenTan.DataLayer.csproj" /> -->
-    <!-- </ItemGroup> -->
+	<!-- <ItemGroup> -->
+	<!-- <ProjectReference Include="..\API\KenTan.Api.csproj" /> -->
+	<!-- <ProjectReference Include="..\DataLayer\KenTan.DataLayer.csproj" /> -->
+	<!-- </ItemGroup> -->
 
 </Project>
