--- a/.github/workflows/WebApi20211201194514.yml
+++ b/.github/workflows/WebApi20211201194514.yml
@@ -44,6 +44,19 @@ jobs:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH_WebApi }}
 
+    - uses: actions/checkout@v2
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: ${{ env.DOTNET_CORE_VERSION }}
+    - name: Restore
+      run: dotnet restore "${{ env.WORKING_DIRECTORY_WebUi }}"
+    - name: Build
+      run: dotnet build "${{ env.WORKING_DIRECTORY_WebUi }}" --configuration ${{ env.CONFIGURATION }} --no-restore
+    - name: Test
+      run: dotnet test "${{ env.WORKING_DIRECTORY_WebUi }}" --no-build
+    - name: Publish
+      run: dotnet publish "${{ env.WORKING_DIRECTORY_WebUi }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH_WebUi }}"
     - name: Deploy to Azure WebApp WebUi
       uses: azure/webapps-deploy@v2
       with:
