deployment with AzureDeploy

--- a/WebUI/appsettings.Development.json
+++ b/WebUI/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ServiceSetting": {
-    "BaseUrl": "https://localhost:5001"
+    "BaseUrl": "https://webapicodechallenge.azurewebsites.net/"
   }
 }
