--- a/WebUI/appsettings.json
+++ b/WebUI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ServiceSetting": {
-    "BaseUrl": "https://localhost:5001"
+    "BaseUrl": "https://webapicodechallenge.azurewebsites.net/"
   }
 }
